syntax = "proto3";

package auth;

// ===== SERVICE DEFINITION =====
service AuthService {
  // user actions
  rpc Register (RegisterRequest) returns (RegisterResponse) {};
  rpc Login (LoginRequest) returns (LoginResponse) {};
  rpc VerifyOTP (VerifyOtpRequest) returns (VerifyOtpResponse) {};
  rpc Refresh(RefreshRequest) returns (RefreshResponse);

  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {};
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse) {};
  rpc RequestResetPassword (RequestResetPasswordRequest) returns (RequestResetPasswordResponse) {};
  rpc ChangeEmail (ChangeEmailRequest) returns (ChangeEmailResponse) {};
  rpc ChangeRolePartner (ChangeRolePartnerRequest) returns (ChangeRolePartnerResponse) {};
  rpc GetEmailUser (GetEmailUserRequest) returns (GetEmailUserResponse) {};
  rpc GetProfile (GetProfileRequest) returns (GetProfileReponse) {};
  rpc ChangeAvatar (ChangeAvatarRequest) returns (ChangeAvatarResponse) {};
  rpc GetRealnameAvatar (GetRealnameAvatarRequest) returns (GetRealnameAvatarResponse) {};
  rpc GetAllUser (GetAllUserRequest) returns (GetAllUserResponse) {};

  // admin actions
  rpc ChangeRole (ChangeRoleRequest) returns (ChangeRoleResponse) {};
  rpc BanUser (BanUserRequest) returns (BanUserResponse) {};
  rpc UnbanUser (UnbanUserRequest) returns (UnbanUserResponse) {};
  rpc SendEmailToUser(SendEmailToUserRequest) returns (SendemailToUserResponse) {};

  // admin service gọi khi check account có đủ điều kiện đăng bán không
  rpc CheckAccount (LoginRequest) returns (LoginResponse) {};
}

// ===== MESSAGES =====

// --- Register/Login/OTP/Refresh  ---
message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string realname = 4;
}

message RegisterResponse {
  bool success = 1;
  int32 auth_id = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string sessionId = 1;
}

message VerifyOtpRequest {
  string sessionId = 1;
  string otp = 2;
}

message VerifyOtpResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 auth_id = 3;
  string role = 4;
}

message RefreshRequest {
  string refreshToken = 1;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// --- User methods ---
message ChangePasswordRequest {
  string sessionId = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePasswordResponse {
  bool success = 1;
}

message ResetPasswordRequest {
  string username = 1;
  string otp = 2;
  string newPassword = 3;
}

message ResetPasswordResponse {
  bool success = 1;
}

message ChangeEmailRequest {
  string sessionId = 1;
  string newEmail = 2;
}

message ChangeEmailResponse {
  bool success = 1;
}

// --- Admin methods ---
message ChangeRoleRequest {
  string username = 1; // user target
  string newRole = 2;
}

message ChangeRoleResponse {
  bool success = 1;
}

message BanUserRequest {
  string username = 1;
}

message BanUserResponse {
  bool success = 1;
}

message UnbanUserRequest {
  string username = 1;
}

message UnbanUserResponse {
  bool success = 1;
}

// --- Request OTP reset password ---
message RequestResetPasswordRequest {
  string username = 1;
}

message RequestResetPasswordResponse {
  bool success = 1;
}

message ChangeRolePartnerRequest {
  string username = 1;
}

message ChangeRolePartnerResponse {
  bool success = 1;
}

message GetEmailUserRequest {
  int32 id = 1;
}

message GetEmailUserResponse {
  string email = 1;
}

message GetProfileRequest {
  int32 id = 1;
}

message GetProfileReponse {
  string role = 1;
  bool biBan = 2;
  string avatarUrl = 3;
}

message SendEmailToUserRequest {
  string who = 1;
  string title = 2;
  string content = 3;
}

message SendemailToUserResponse {
  bool success = 1;
}

message ChangeAvatarRequest {
  int32 userId = 1;
  string avatarUrl = 2;
}

message ChangeAvatarResponse {
  bool success = 1;
}

message GetRealnameAvatarRequest {
  repeated int32 userIds = 1;
}

message RealnameAvatarInfo {
  int32 userId = 1;
  string realname = 2;
  string avatarUrl = 3;
}

message GetRealnameAvatarResponse {
  repeated RealnameAvatarInfo realnameAvatarInfo = 1;
}

message GetAllUserRequest {}

message UserTraVe {
  int32 userId = 1;
  string realname = 2;
  string avatarUrl = 3;
}

message GetAllUserResponse {
  repeated UserTraVe userTraVe = 1;
}
